<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.collegecompanion.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_timetable"
        android:name="com.example.collegecompanion.TimetableFragment"
        android:label="@string/nav_timetable"
        tools:layout="@layout/fragment_timetable" />

    <fragment
        android:id="@+id/navigation_reminders"
        android:name="com.example.collegecompanion.RemindersFragment"
        android:label="@string/nav_reminders"
        tools:layout="@layout/fragment_reminders" />
</navigation>